Fix overflow issue.

--- a/main.css
+++ b/main.css
@@ -66,6 +66,7 @@ aside > h3 {
   background: #ECE5DD;
   flex: 1 1 auto;
   padding: 1rem;
+  overflow-y: scroll;
 }
 
 .chat-text-mine-parent {
